<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackColor"
    android:padding="16dp">

    <!-- ScrollView로 감싼 입력 영역 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/imageDefault"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16sp"
                android:contentDescription="Default user image"
                android:src="@drawable/ic_default_pic" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/username"
                android:padding="7dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="7dp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="7dp" />

            <EditText
                android:id="@+id/editDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/department"
                android:padding="7dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/editPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/position"
                android:padding="7dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </ScrollView>

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/buttonshape"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshape"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
