<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackColor"
    android:padding="16dp">

    <!-- Save Button (우측 상단) -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/buttonshape"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logout Button (좌측 상단) -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshape"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ScrollView for Form Fields -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout">


    <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageDefault"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="Default user image"
                android:src="@drawable/ic_default_pic" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="7dp" />


            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="7dp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="7dp" />

            <EditText
                android:id="@+id/editDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/department"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="7dp" />

            <EditText
                android:id="@+id/editPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/position"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="7dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"
                    android:background="@drawable/edittextshape"
                    android:hint="Enter new Password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <ImageButton
                    android:id="@+id/buttonShowNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white"
                    android:imeOptions="actionDone"
                    android:src="@drawable/ic_visibility_off" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"
                    android:background="@drawable/edittextshape"
                    android:hint="Confirm new Password"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <ImageButton
                    android:id="@+id/buttonShowConfirmNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_visibility_off" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
